--- a/weblate/templates/configuration/custom.css
+++ b/weblate/templates/configuration/custom.css
@@ -1,104 +1,53 @@
-{% load custom_filters %}
-
-{% with header_color_split=header_color|default:""|split:"," %}
-{% with header_text_color_split=header_text_color|default:""|split:"," %}
-{% with navi_color_split=navi_color|default:""|split:"," %}
-{% with nav_text_color_split=navi_text_color|default:""|split:"," %}
-{% with focus_color_split=focus_color|default:""|split:"," %}
-{% with hover_color_split=hover_color|default:""|split:"," %}
-
-body {
-  {% if header_color_split.0 %}
-    --header-color: {{ header_color_split.0 }};
-  {% endif %}
-  {% if header_text_color_split.0 %}
-    --header-text-color: {{ header_text_color_split.0 }};
-  {% endif %}
-  {% if navi_color_split.0 %}
-    --navi-color: {{ navi_color_split.0 }};
-  {% endif %}
-  {% if nav_text_color_split.0 %}
-    --navi-text-color: {{ nav_text_color_split.0 }};
-  {% endif %}
-  {% if focus_color_split.0 %}
-    --focus-color: {{ focus_color_split.0 }};
-  {% endif %}
-  {% if hover_color_split.0 %}
-    --hover-color: {{ hover_color_split.0 }};
-  {% endif %}
-}
-
-body[data-theme="dark"] {
-  {% if header_color_split.1 %}
-    --header-color: {{ header_color_split.1 }};
-  {% endif %}
-  {% if header_text_color_split.1 %}
-    --header-text-color: {{ header_text_color_split.1 }};
-  {% endif %}
-  {% if navi_color_split.1 %}
-    --header-text-color: {{ navi_color_split.1 }};
-  {% endif %}
-  {% if nav_text_color_split.1 %}
-    --header-text-color: {{ nav_text_color_split.1 }};
-  {% endif %}
-  {% if focus_color_split.1 %}
-    --header-text-color: {{ focus_color_split.1 }};
-  {% endif %}
-  {% if hover_color_split.1 %}
-    --header-text-color: {{ hover_color_split.1 }};
-  {% endif %}
-}
-
 {% if header_color %}
   .navbar-inverse {
-    background-color: var(--header-color);
+    background-color: {{ header_color }};
   }
 {% endif %}
 {% if header_text_color %}
 .navbar-inverse .navbar-brand,
 .navbar-inverse .navbar-nav > li > a {
-  color: var(--header-text-color);
+  color: {{ header_text_color }};
 }
 .navbar a path {
-  fill: var(--navi-text-color);
+  fill: {{ navi_text_color }};
 }
 {% endif %}
 {% if navi_color %}
   .sort-cell:hover {
-    color: var(--navi-color);
+    color: {{ navi_color }};
   }
   .nav-pills > li > a,
   .btn-default {
-    color: var(--navi-color);
+    color: {{ navi_color }};
   }
   .btn-link:hover path {
-    fill: var(--navi-color);
+    fill: {{ navi_color }};
   }
 
   .green path,
   .btn-default path {
-    fill: var(--navi-color);
+    fill: {{ navi_color }};
   }
   .btn-group-settings a:hover {
-    color: var(--navi-color);
+    color: {{ navi_color }};
   }
   .format-item span {
-    background-color: var(--navi-color);
+    background-color: {{ navi_color }};
   }
   a {
-    color: var(--navi-color);
+    color: {{ navi_color }};
   }
   .btn-info {
-    color: var(--navi-color);};
+    color: {{ navi_color }};
   }
   .btn-info:focus,
   .btn-info.focus {
-    color: var(--navi-color);
+    color: {{ navi_color }};
   }
   .btn-info:active,
   .btn-info.active,
   .open > .dropdown-toggle.btn-info {
-    color: var(--navi-color);
+    color: {{ navi_color }};
   }
   .btn-info:active:hover,
   .btn-info.active:hover,
@@ -109,46 +58,46 @@ body[data-theme="dark"] {
   .btn-info:active.focus,
   .btn-info.active.focus,
   .open > .dropdown-toggle.btn-info.focus {
-    color: var(--navi-color);
+    color: {{ navi_color }};
   }
   .btn-link {
-    color: var(--navi-color);
+    color: {{ navi_color }};
   }
   .nav .open > a,
   .nav .open > a:hover,
   .nav .open > a:focus {
-    border-color: var(--navi-color);
+    border-color: {{ navi_color }};
   }
   .navbar-inverse .navbar-nav > .active > a,
   .navbar-inverse .navbar-nav > .active > a:hover,
   .navbar-inverse .navbar-nav > .active > a:focus {
-    background-color: var(--navi-color);
+    background-color: {{ navi_color }};
   }
   .navbar-inverse .navbar-nav > .open > a,
   .navbar-inverse .navbar-nav > .open > a:hover,
   .navbar-inverse .navbar-nav > .open > a:focus {
-    background-color: var(--navi-color);
+    background-color: {{ navi_color }};
   }
   @media (max-width: 767px) {
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
-      background-color: var(--navi-color);
+      background-color: {{ navi_color }};
     }
   }
   .pagination > li > a,
   .pagination > li > span {
-    color: var(--navi-color);
+    color: {{ navi_color }};
   }
   a.thumbnail:hover,
   a.thumbnail:focus,
   a.thumbnail.active {
-    border-color: var(--navi-color);
+    border-color: {{ navi_color }};
   }
 {% endif %}
 {% if focus_color %}
   .btn-info {
-    border-color: var(--focus-color);
+    border-color: {{ focus_color }};
   }
   .btn-info.disabled:hover,
   .btn-info[disabled]:hover,
@@ -159,10 +108,10 @@ body[data-theme="dark"] {
   .btn-info.disabled.focus,
   .btn-info[disabled].focus,
   fieldset[disabled] .btn-info.focus {
-    border-color: var(--focus-color);
+    border-color: {{ focus_color }};
   }
   .btn-warning {
-    background-color: var(--focus-color);
+    background-color: {{ focus_color }};
   }
   .btn-warning.disabled:hover,
   .btn-warning[disabled]:hover,
@@ -173,80 +122,80 @@ body[data-theme="dark"] {
   .btn-warning.disabled.focus,
   .btn-warning[disabled].focus,
   fieldset[disabled] .btn-warning.focus {
-    background-color: var(--focus-color);
+    background-color: {{ focus_color }};
   }
   .btn-warning .badge {
-    color: var(--focus-color);
+    color: {{ focus_color }};
   }
   .navbar-inverse .navbar-brand:hover,
   .navbar-inverse .navbar-brand:focus {
-    color: var(--focus-color);
+    color: {{ focus_color }};
   }
   .navbar-inverse .navbar-nav > li > a:hover,
   .navbar-inverse .navbar-nav > li > a:focus {
-    color: var(--focus-color);
+    color: {{ focus_color }};
   }
   @media (max-width: 767px) {
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
-      color: var(--focus-color);
+      color: {{ focus_color }};
     }
   }
   .navbar-inverse .navbar-link:hover {
-    color: var(--focus-color);
+    color: {{ focus_color }};
   }
   .navbar-inverse .btn-link:hover,
   .navbar-inverse .btn-link:focus {
-    color: var(--focus-color);
+    color: {{ focus_color }};
   }
 
   .btn-info {
-    border: 1px solid var(--focus-color);
+    border: 1px solid {{ focus_color }};
   }
   .navbar .navbar-brand:focus path,
   .navbar .navbar-brand:active path,
   .navbar a:hover path {
-    fill: var(--focus-color);
+    fill: {{ focus_color }};
   }
   .btn-primary:hover {
-    background-color: var(--focus-color);
+    background-color: {{ focus_color }};
   }
 
   .btn-info:hover {
-    background-color: var(--focus-color);
+    background-color: {{ focus_color }};
   }
 {% endif %}
 
 {% if hover_color %}
   a:hover,
   a:focus {
-    color: var(--hover-color);
+    color: {{ hover_color }};
   }
   .text-primary {
-    color: var(--hover-color);
+    color: {{ hover_color }};
   }
   .bg-primary {
-    background-color: var(--hover-color);
+    background-color: {{ hover_color }};
   }
   .btn-link:hover,
   .btn-link:focus {
-    color: var(--hover-color);
+    color: {{ hover_color }};
   }
   .dropdown-menu > .active > a,
   .dropdown-menu > .active > a:hover,
   .dropdown-menu > .active > a:focus {
-    background-color: var(--hover-color);
+    background-color: {{ hover_color }};
   }
   .nav-pills > li.active > a,
   .nav-pills > li.active > a:hover,
   .nav-pills > li.active > a:focus {
-    background-color: var(--hover-color);
+    background-color: {{ hover_color }};
   }
   .pagination > li > a:hover,
   .pagination > li > span:hover,
   .pagination > li > a:focus,
   .pagination > li > span:focus {
-    color: var(--hover-color);
+    color: {{ hover_color }};
   }
   .pagination > .active > a,
   .pagination > .active > span,
@@ -254,18 +203,18 @@ body[data-theme="dark"] {
   .pagination > .active > span:hover,
   .pagination > .active > a:focus,
   .pagination > .active > span:focus {
-    background-color: var(--hover-color);
-    border-color: var(--hover-color);
+    background-color: {{ hover_color }};
+    border-color: {{ hover_color }};
   }
   .list-group-item.active,
   .list-group-item.active:hover,
   .list-group-item.active:focus {
-    background-color: var(--hover-color);
-    border-color: var(--hover-color);
+    background-color: {{ hover_color }};
+    border-color: {{ hover_color }};
   }
   .nav-pills > .active > a,
   .nav > .active > a:hover {
-    border: 1px solid var(--hover-color);
+    border: 1px solid {{ hover_color }};
   }
   .btn-default:hover,
   .nav-pills > li > a:hover,
@@ -273,18 +222,18 @@ body[data-theme="dark"] {
   .nav-pills .open > a,
   .nav-pills .open > a:hover,
   .nav-pills .open > a:focus {
-    color: var(--hover-color);
+    color: {{ hover_color }};
   }
   .btn-default:hover path,
   .green.btn-link:hover path {
-    fill: var(--hover-color);
+    fill: {{ hover_color }};
   }
   .format-item {
-    background-color: var(--hover-color);
+    background-color: {{ hover_color }};
   }
   .nav-pills > .active > a,
   .nav > .active > a:hover {
-    border: 1px solid var(--hover-color);
+    border: 1px solid {{ hover_color }};
   }
   .btn-default:hover,
   .nav-pills > li > a:hover,
@@ -292,9 +241,10 @@ body[data-theme="dark"] {
   .nav-pills .open > a,
   .nav-pills .open > a:hover,
   .nav-pills .open > a:focus {
-    color: var(--hover-color);
+    color: {{ hover_color }};
   }
 {% endif %}
+
 
 {% if enforce_hamburger %}
   {% comment %}From https://stackoverflow.com/a/56229201/225718{% endcomment %}
@@ -379,7 +329,7 @@ body[data-theme="dark"] {
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
     {% if focus_color %}
-      color: var(--focus-color);
+      color: {{ focus_color }};
     {% else %}
       color: #2eccaa;
     {% endif %}
@@ -390,7 +340,7 @@ body[data-theme="dark"] {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #ffffff;
     {% if navi_color %}
-      background-color: var(--navi-color);
+      background-color: {{ navi_color }};
     {% else %}
       background-color: #1fa385;
     {% endif %}
@@ -419,9 +369,3 @@ body[data-theme="dark"] {
     font-family: {{ brand_font }};
   }
 {% endif %}
-{% endwith %}
-{% endwith %}
-{% endwith %}
-{% endwith %}
-{% endwith %}
-{% endwith %}
