--- a/weblate/templates/configuration/custom.css
+++ b/weblate/templates/configuration/custom.css
@@ -1,60 +1,83 @@
-{% load custom_filters %}
-
-{% comment %} {% with header_color_split=header_color|default:""|split:"," %}
-{% with header_text_color_split=header_text_color|default:""|split:"," %}
-{% with navi_color_split=navi_color|default:""|split:"," %}
-{% with nav_text_color_split=navi_text_color|default:""|split:"," %}
-{% with focus_color_split=focus_color|default:""|split:"," %}
-{% with hover_color_split=hover_color|default:""|split:"," %} {% endcomment %}
-
+{% comment %} Light theme color variables {% endcomment %}
+{% if header_color_light %}
 body {
-  {% if header_color_split.0 %}
-    --header-color: {{ header_color_split.0 }};
-  {% endif %}
-  {% if header_text_color_split.0 %}
-    --header-text-color: {{ header_text_color_split.0 }};
-  {% endif %}
-  {% if navi_color_split.0 %}
-    --navi-color: {{ navi_color_split.0 }};
-  {% endif %}
-  {% if nav_text_color_split.0 %}
-    --navi-text-color: {{ nav_text_color_split.0 }};
-  {% endif %}
-  {% if focus_color_split.0 %}
-    --focus-color: {{ focus_color_split.0 }};
-  {% endif %}
-  {% if hover_color_split.0 %}
-    --hover-color: {{ hover_color_split.0 }};
-  {% endif %}
+--header-color: {{ header_color_light }};
 }
+{% endif %}
 
+{% if header_text_color_light %}
+body {
+--header-text-color: {{ header_text_color_light }};
+}
+{% endif %}
+
+{% if navi_color_light %}
+body {
+--navi-color: {{ navi_color_light }};
+}
+{% endif %}
+
+{% if navi_text_color_light %}
+body {
+--navi-text-color: {{ navi_text_color_light }};
+}
+{% endif %}
+
+{% if focus_color_light %}
+body {
+--focus-color: {{ focus_color_light }};
+}
+{% endif %}
+
+{% if hover_color_light %}
+body {
+--hover-color: {{ hover_color_light }};
+}
+{% endif %}
+
+{% comment %} Dark theme  color variables {% endcomment %}
+{% if header_color_dark %}
 body[data-theme="dark"] {
-  {% if header_color_split.1 %}
-    --header-color: {{ header_color_split.1 }};
-  {% endif %}
-  {% if header_text_color_split.1 %}
-    --header-text-color: {{ header_text_color_split.1 }};
-  {% endif %}
-  {% if navi_color_split.1 %}
-    --header-text-color: {{ navi_color_split.1 }};
-  {% endif %}
-  {% if nav_text_color_split.1 %}
-    --header-text-color: {{ nav_text_color_split.1 }};
-  {% endif %}
-  {% if focus_color_split.1 %}
-    --header-text-color: {{ focus_color_split.1 }};
-  {% endif %}
-  {% if hover_color_split.1 %}
-    --header-text-color: {{ hover_color_split.1 }};
-  {% endif %}
+--header-color: {{ header_color_dark }};
 }
+{% endif %}
 
-{% if header_color %}
+{% if header_text_color_dark %}
+body[data-theme="dark"] {
+--header-text-color: {{ header_text_color_dark }};
+}
+{% endif %}
+
+{% if navi_color_dark %}
+body[data-theme="dark"] {
+--navi-color: {{ navi_color_dark }};
+}
+{% endif %}
+
+{% if navi_text_color_dark %}
+body[data-theme="dark"] {
+--navi-text-color: {{ navi_text_color_dark }};
+}
+{% endif %}
+
+{% if focus_color_dark %}
+body[data-theme="dark"] {
+  --focus-color: {{ focus_color_dark }};
+}
+{% endif %}
+
+{% if hover_color_dark %}
+body[data-theme="dark"] {
+  --hover-color: {{ hover_color_dark }};
+}
+{% endif %}
+
+{% if header_color_light %}
   .navbar-inverse {
     background-color: var(--header-color);
   }
 {% endif %}
-{% if header_text_color %}
+{% if header_text_color_light %}
 .navbar-inverse .navbar-brand,
 .navbar-inverse .navbar-nav > li > a {
   color: var(--header-text-color);
@@ -63,7 +86,7 @@ body[data-theme="dark"] {
   fill: var(--navi-text-color);
 }
 {% endif %}
-{% if navi_color %}
+{% if navi_color_light %}
   .sort-cell:hover {
     color: var(--navi-color);
   }
@@ -146,7 +169,7 @@ body[data-theme="dark"] {
     border-color: var(--navi-color);
   }
 {% endif %}
-{% if focus_color %}
+{% if focus_color_light %}
   .btn-info {
     border-color: var(--focus-color);
   }
@@ -217,7 +240,7 @@ body[data-theme="dark"] {
   }
 {% endif %}
 
-{% if hover_color %}
+{% if hover_color_light %}
   a:hover,
   a:focus {
     color: var(--hover-color);
@@ -378,7 +401,7 @@ body[data-theme="dark"] {
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
-    {% if focus_color %}
+    {% if focus_color_light %}
       color: var(--focus-color);
     {% else %}
       color: #2eccaa;
@@ -389,7 +412,7 @@ body[data-theme="dark"] {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #ffffff;
-    {% if navi_color %}
+    {% if navi_color_light %}
       background-color: var(--navi-color);
     {% else %}
       background-color: #1fa385;
@@ -419,9 +442,3 @@ body[data-theme="dark"] {
     font-family: {{ brand_font }};
   }
 {% endif %}
-{% comment %} {% endwith %}
-{% endwith %}
-{% endwith %}
-{% endwith %}
-{% endwith %}
-{% endwith %} {% endcomment %}
