Update it to display 'X strings / Y words' format

--- a/weblate/templates/search.html
+++ b/weblate/templates/search.html
@@ -20,9 +20,8 @@
     </form>
     {% if page_obj.object_list %}
         <div class="search-summary">
-          <p>{% trans "Total strings" %}: {{ total_strings }}</p>
-          <p>{% trans "Total words" %}: {{ total_words }}</p>
-        </div>
+          <p>{{ total_strings }} {% trans "strings" %} / {{ total_words }} {% trans "words" %}</p>
+        </div> 
         {% include "snippets/embed-units.html" with units=page_obj.object_list hide_context=True include_search=True force_source=True show_translation=True %}
         {% include "paginator.html" %}
     {% else %}
