--- a/weblate/templates/snippets/info.html
+++ b/weblate/templates/snippets/info.html
@@ -174,7 +174,7 @@
         <td colspan="2">{{ stats.last_changed }}</td>
         </tr>
         <tr>
-        <th>{% trans "Last author" %}</th>
+        <th>{% trans "Last change made by" %}</th>
         <td colspan="2">{{ translation.get_last_author }}</td>
         </tr>
       {% endif %}
