--- a/weblate/templates/accounts/register.html
+++ b/weblate/templates/accounts/register.html
@@ -12,75 +12,72 @@
 
 {% if registration_email or registration_backends %}
 
-<div class="container">
+  <div class="container">
 
-{% if invitation %}
-  <div class="alert alert-info">
-    {% include "snippets/invite-info.html" %}
-    {% translate "Please complete the registration to accept the invitation." %}
+    {% if invitation %}
+      <div class="alert alert-info">
+        {% include "snippets/invite-info.html" %}
+        {% translate "Please complete the registration to accept the invitation." %}
+      </div>
+    {% endif %}
+
+    {% if form.errors %}
+      {% trans "Please fix errors in the registration form." as msg%}
+      {% show_message "error" msg %}
+    {% endif %}
+
+    <h2>{{ site_title }}</h2>
+    <div class="row">
+
+      <div class="col-sm-6 col-sm-push-6">
+
+        <h4>{% trans "Register in Weblate" %}</h4>
+
+        <div class="panel panel-default">
+          <div class="panel-body">
+
+            {% if registration_email %}
+
+              <form action="{% url 'register' %}" method="post" accept-charset="utf-8">
+                {% csrf_token %}
+                {{ form|crispy }}
+                {% if captcha_form %}
+                  {{ captcha_form|crispy }}
+                {% endif %}
+                <input type="submit" value="{% trans 'Register' %}" class="btn btn-primary btn-full" />
+              </form>
+
+            {% endif %}
+
+            {% if registration_backends %}
+
+              <h5 class="login-label">{% trans "Create an account using:" %}</h5>
+
+              {% for name in registration_backends %}
+                <div class="col-sm-6 col-xs-12 btn-auth">
+                  <a href="" class="btn btn-default link-post" data-href="{% url 'social:begin' name %}" {% if next %}data-params='{"next": "{{ next|escapejs }}"}'{% endif %}>{% auth_name name " " %}</a>
+                </div>
+              {% endfor %}
+
+            {% endif %}
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-sm-pull-6">
+        {% include "snippets/login-info.html" %}
+      </div>
+
+    </div>
+
   </div>
-{% endif %}
-
-{% if form.errors %}
-{% trans "Please fix errors in the registration form." as msg%}
-{% show_message "error" msg %}
-{% endif %}
-
-<h2>{{ site_title }}</h2>
-<div class="row">
-
-<div class="col-sm-7">
-{% include "snippets/login-info.html" %}
-</div>
-
-<div class="col-sm-5">
-
-<h4>{% trans "Register in Weblate" %}</h4>
-
-<div class="panel panel-default">
-  <div class="panel-body">
-
-{% if registration_email %}
-
-<form action="{% url 'register' %}" method="post" accept-charset="utf-8">
-
-{% csrf_token %}
-{{ form|crispy }}
-{% if captcha_form %}
-{{ captcha_form|crispy }}
-{% endif %}
-<input type="submit" value="{% trans 'Register' %}" class="btn btn-primary btn-full" />
-</form>
-
-{% endif %}
-
-{% if registration_backends %}
-
-<h5 class="login-label">{% trans "Create an account using:" %}</h5>
-
-{% for name in registration_backends %}
-  <div class="col-sm-6 col-xs-12 btn-auth">
-    <a href="" class="btn btn-default link-post" data-href="{% url 'social:begin' name %}" {% if next %}data-params='{"next": "{{ next|escapejs }}"}'{% endif %}>{% auth_name name " " %}</a>
-  </div>
-{% endfor %}
-
-{% endif %}
-
 {% else %}
 
-<p>
-{% url 'contact' as contact_url %}
-{% trans "Sorry, new registrations are turned off on this site." %}
-<a href="{{ contact_url }}">{% trans "You can contact us for more details." %}</a>
-</p>
+  <p>
+    {% url 'contact' as contact_url %}
+    {% trans "Sorry, new registrations are turned off on this site." %}
+    <a href="{{ contact_url }}">{% trans "You can contact us for more details." %}</a>
+  </p>
 
 {% endif %}
-
-
-</div>
-</div>
-
-</div>
-</div>
-</div>
 {% endblock %}
