--- a/weblate/templates/accounts/reset.html
+++ b/weblate/templates/accounts/reset.html
@@ -11,46 +11,46 @@
 
 <div class="container">
 
-{% if second_stage %}
-{% trans "Forgotten your password? You can now set new one." as msg %}
-{% show_message "info" msg %}
-{% else %}
-{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." as msg %}
-{% show_message "info" msg %}
-{% endif %}
+  {% if second_stage %}
+    {% trans "Forgotten your password? You can now set new one." as msg %}
+    {% show_message "info" msg %}
+  {% else %}
+    {% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." as msg %}
+    {% show_message "info" msg %}
+  {% endif %}
 
-{% if form.errors %}
-{% trans "Please fix errors in the registration form." as msg %}
-{% show_message "error" msg %}
-{% endif %}
+  {% if form.errors %}
+    {% trans "Please fix errors in the registration form." as msg %}
+    {% show_message "error" msg %}
+  {% endif %}
 
-<h2>{{ site_title }}</h2>
-<div class="row">
+  <h2>{{ site_title }}</h2>
+  <div class="row">
 
-<div class="col-sm-7">
-{% include "snippets/login-info.html" %}
-</div>
 
-<div class="col-sm-5">
+    <div class="col-sm-6 col-sm-push-6">
 
-  <h4>{% trans "Password reset" %}</h4>
-<div class="panel panel-default">
-  <div class="panel-body">
+      <h4>{% trans "Password reset" %}</h4>
+      <div class="panel panel-default">
+        <div class="panel-body">
 
-<form action="{% url 'password_reset' %}" method="post" accept-charset="utf-8" role="form">
-{% csrf_token %}
-{{ form|crispy }}
-{% if captcha_form %}
-{{ captcha_form|crispy }}
-{% endif %}
-<input type="submit" value="{% if second_stage %}{% trans 'Set my password' %}{% else %}{% trans 'Reset my password' %}{% endif %}" class="btn btn-primary btn-full" />
-</form>
+          <form action="{% url 'password_reset' %}" method="post" accept-charset="utf-8" role="form">
+            {% csrf_token %}
+            {{ form|crispy }}
+            {% if captcha_form %}
+            {{ captcha_form|crispy }}
+            {% endif %}
+            <input type="submit" value="{% if second_stage %}{% trans 'Set my password' %}{% else %}{% trans 'Reset my password' %}{% endif %}" class="btn btn-primary btn-full" />
+          </form>
 
-</div>
-</div>
+        </div>
+      </div>
 
-</div>
-</div>
+    </div>
+    <div class="col-sm-6 col-sm-pull-6">
+      {% include "snippets/login-info.html" %}
+    </div>
+  </div>
 </div>
 
 {% endblock %}
