--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -359,7 +359,7 @@ var _rollbarConfig = {
 {% endblock %}
 
 </div>
-<form id="link-post" method="POST">
+<form id="link-post" method="post">
 {% csrf_token %}
 </form>
 <!-- Creates the bootstrap modal where the image will appear -->
