--- a/weblate/templates/billing/detail.html
+++ b/weblate/templates/billing/detail.html
@@ -100,7 +100,7 @@
 {% endwith %}
 
 {% if offer_hosting and billing.plan.price == 0 %}
-<form method="POST">
+<form method="post">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
