--- a/weblate/templates/category.html
+++ b/weblate/templates/category.html
@@ -124,7 +124,7 @@
 
 <div class="tab-pane" id="search">
 
-<form action="{% url 'search' path=object.get_url_path %}" method="GET" data-persist="search-project">
+<form action="{% url 'search' path=object.get_url_path %}" method="get" data-persist="search-project">
 {% include "snippets/search-form.html" %}
 </form>
 
