--- a/weblate/templates/dashboard/user.html
+++ b/weblate/templates/dashboard/user.html
@@ -91,7 +91,7 @@
 
 <div class="tab-pane" id="search">
 
-<form action="{% url 'search' %}" method="GET" data-persist="search-index">
+<form action="{% url 'search' %}" method="get" data-persist="search-index">
 {% include "snippets/search-form.html" %}
 </form>
 
