--- a/weblate/templates/fonts/font_list.html
+++ b/weblate/templates/fonts/font_list.html
@@ -45,7 +45,7 @@
 
 {% if font_list %}
 {% if can_edit %}
-<form method="POST" enctype="multipart/form-data">
+<form method="post" enctype="multipart/form-data">
 {% csrf_token %}
 <div class="panel panel-default">
 <div class="panel-heading"><h4 class="panel-title">{% trans "Add font group" %}</h4></div>
@@ -86,7 +86,7 @@
 </table>
 
 {% if can_edit %}
-<form method="POST" enctype="multipart/form-data">
+<form method="post" enctype="multipart/form-data">
 {% csrf_token %}
 <div class="panel panel-default">
 <div class="panel-heading"><h4 class="panel-title">{% trans "Add font" %}</h4></div>
