--- a/weblate/templates/language-project.html
+++ b/weblate/templates/language-project.html
@@ -104,7 +104,7 @@
 
 <div class="tab-pane" id="search">
 
-<form action="{% url 'search' path=object.get_url_path %}" method="GET">
+<form action="{% url 'search' path=object.get_url_path %}" method="get">
 {% include "snippets/search-form.html" %}
 </form>
 
