--- a/weblate/templates/project-label-edit.html
+++ b/weblate/templates/project-label-edit.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-<form method="POST">
+<form method="post">
 <div class="panel panel-default">
 <div class="panel-heading"><h4 class="panel-title">{% trans "Edit label" %}</h4></div>
 <div class="panel-body">
