--- a/weblate/templates/project-labels.html
+++ b/weblate/templates/project-labels.html
@@ -41,7 +41,7 @@
 </tbody>
 </table>
 
-<form method="POST">
+<form method="post">
 <div class="panel panel-default">
 <div class="panel-heading"><h4 class="panel-title">{% trans "Add label" %}</h4></div>
 <div class="panel-body">
