--- a/weblate/templates/snippets/user-list.html
+++ b/weblate/templates/snippets/user-list.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% if form %}
-<form method="GET" class="result-page-form">
+<form method="get" class="result-page-form">
 {% crispy form %}
 </form>
 {% endif %}
