--- a/weblate/templates/trans/backups.html
+++ b/weblate/templates/trans/backups.html
@@ -23,7 +23,7 @@
 </tbody>
 </table>
 
-<form method="POST">
+<form method="post">
 <div class="panel panel-default">
 <div class="panel-heading"><h4 class="panel-title">{% trans "Trigger backup" %}</h4></div>
 <div class="panel-body">
