--- a/weblate/templates/translation.html
+++ b/weblate/templates/translation.html
@@ -477,7 +477,7 @@
 
 <div class="tab-pane" id="search">
 
-<form action="{{ translate_url }}" method="GET" data-persist="search-translation">
+<form action="{{ translate_url }}" method="get" data-persist="search-translation">
 {% include "snippets/search-form.html" %}
 </form>
 
