--- a/weblate/templates/zen.html
+++ b/weblate/templates/zen.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="query-container">
-  <form method="GET" class="result-page-form">
+  <form method="get" class="result-page-form">
     {% crispy search_form  %}
   </form>
 </div>
