--- a/weblate/templates/fonts/fontgroup_detail.html
+++ b/weblate/templates/fonts/fontgroup_detail.html
@@ -23,7 +23,7 @@
 <td><a href="{{ override.font.get_absolute_url }}">{{ override.font }}</a></td>
 <td>
 {% if can_edit %}
-<form method="POST">
+<form method="post">
 {% csrf_token %}
 <input type="hidden" name="override" value="{{ override.pk }}" />
 <button type="submit" class="btn btn-danger">{% trans "Remove" %}</button>
@@ -41,7 +41,7 @@
 </div>
 
 {% if can_edit %}
-<form method="POST" enctype="multipart/form-data">
+<form method="post" enctype="multipart/form-data">
 {% csrf_token %}
 <div class="panel panel-default">
 <div class="panel-heading"><h4 class="panel-title">{% trans "Add language override" %}</h4></div>
@@ -54,7 +54,7 @@
 </div>
 </form>
 
-<form method="POST" enctype="multipart/form-data">
+<form method="post" enctype="multipart/form-data">
 {% csrf_token %}
 <div class="panel panel-default">
 <div class="panel-heading"><h4 class="panel-title">{% trans "Edit font group" %}</h4></div>
