--- a/weblate/templates/list-comments.html
+++ b/weblate/templates/list-comments.html
@@ -23,14 +23,14 @@
     {% if user_can_delete_comment or user_can_resolve_comment %}
     <div class="btn-float pull-right flip">
       {% if user_can_resolve_comment and not comment.resolved %}
-        <form method="POST" action="{% url 'resolve-comment' pk=comment.pk %}" class="auto-save-translation inlineform">
+        <form method="post" action="{% url 'resolve-comment' pk=comment.pk %}" class="auto-save-translation inlineform">
         {% csrf_token %}
         <input type="hidden" name="next" value="{{ next_url }}#comments__{{ comment.pk }}" />
         <button class="btn btn-link green" title="{% trans "Resolve" %}">{% icon "check.svg" %}</button>
         </form>
       {% endif %}
       {% if user_can_delete_comment %}
-        <form method="POST" action="{% url 'delete-comment' pk=comment.pk %}" class="auto-save-translation inlineform">
+        <form method="post" action="{% url 'delete-comment' pk=comment.pk %}" class="auto-save-translation inlineform">
         {% csrf_token %}
         <input type="hidden" name="next" value="{{ next_url }}" />
         {% if has_antispam and comment.user != user %}
