--- a/weblate/templates/machinery/list.html
+++ b/weblate/templates/machinery/list.html
@@ -31,9 +31,9 @@
   </td>
   <td class="bottom-button">
     {% if service.is_enabled or not service.is_available %}
-      <form method="POST" action="{{ service.get_absolute_url }}">{% csrf_token %}<input type="hidden" name="delete" value="1" /><button type="submit" class="btn btn-danger">{% trans "Disable" %}</button></form>
+      <form method="post" action="{{ service.get_absolute_url }}">{% csrf_token %}<input type="hidden" name="delete" value="1" /><button type="submit" class="btn btn-danger">{% trans "Disable" %}</button></form>
     {% else %}
-      <form method="POST" action="{{ service.get_absolute_url }}">{% csrf_token %}<input type="hidden" name="enable" value="1" /><button type="submit" class="btn btn-primary">{% trans "Enable" %}</button></form>
+      <form method="post" action="{{ service.get_absolute_url }}">{% csrf_token %}<input type="hidden" name="enable" value="1" /><button type="submit" class="btn btn-primary">{% trans "Enable" %}</button></form>
     {% endif %}
   </td>
   <td class="bottom-button">
@@ -68,7 +68,7 @@
   {% include 'machinery/detail.html' %}
   </td>
   <td class="bottom-button">
-    <form method="POST" action="{{ service.get_absolute_url }}">{% csrf_token %}<button type="submit" class="btn btn-primary" name="install" value="1">{% trans "Install" %}</button></form>
+    <form method="post" action="{{ service.get_absolute_url }}">{% csrf_token %}<button type="submit" class="btn btn-primary" name="install" value="1">{% trans "Install" %}</button></form>
   </td>
   </tr>
 {% endfor %}
