--- a/weblate/templates/manage/appearance.html
+++ b/weblate/templates/manage/appearance.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-<form method="POST" action="{% url "manage-appearance" %}">
+<form method="post" action="{% url "manage-appearance" %}">
 {% csrf_token %}
 <div class="panel panel-default">
 <div class="panel-heading"><h4 class="panel-title">{% trans "Customize appearance" %}</h4></div>
