--- a/weblate/templates/manage/teams.html
+++ b/weblate/templates/manage/teams.html
@@ -94,7 +94,7 @@
     </div>
 </div>
 
-<form method="POST">
+<form method="post">
 {% csrf_token %}
 <div class="panel panel-default">
   <div class="panel-heading">
