--- a/weblate/templates/screenshots/screenshot_detail.html
+++ b/weblate/templates/screenshots/screenshot_detail.html
@@ -77,7 +77,7 @@
 </div>
 
 {% if user_can_edit_screenshot %}
-<form action="{{ object.get_absolute_url }}" method="POST" enctype="multipart/form-data" id="screenshot-form-container">
+<form action="{{ object.get_absolute_url }}" method="post" enctype="multipart/form-data" id="screenshot-form-container">
 {% csrf_token %}
 <div class="panel panel-default">
 <div class="panel-heading"><h4 class="panel-title">{% trans "Edit screenshot" %}</h4></div>
@@ -109,7 +109,7 @@
 
 <p class="help-block">{% trans "Deleting screenshot will remove it from all associated source strings." %}</p>
 
-<form action="{% url 'screenshot-delete' pk=object.pk %}" method="POST">
+<form action="{% url 'screenshot-delete' pk=object.pk %}" method="post">
 {% csrf_token %}
 <button type="submit" class="btn btn-danger">{% trans "Delete" %}</button>
 </form>
