--- a/weblate/templates/translate.html
+++ b/weblate/templates/translate.html
@@ -56,7 +56,7 @@
 {% with variants=unit.variants %}
 
 <div class="query-container">
-  <form method="GET" class="result-page-form">
+  <form method="get" class="result-page-form">
     {% crispy search_form  %}
   </form>
 </div>
@@ -298,7 +298,7 @@
 {% if others.skipped %}
   <p class="help-block">{% trans "Showing only subset of the strings as there were too many matches." %}</p>
 {% endif %}
-<form method="POST" action="{{ unit.translation.get_translate_url}}?{{ search_url }}&amp;offset={{ offset }}&amp;checksum={{ unit.checksum }}">
+<form method="post" action="{{ unit.translation.get_translate_url}}?{{ search_url }}&amp;offset={{ offset }}&amp;checksum={{ unit.checksum }}">
   {% csrf_token %}
   <table class="table table-condensed">
     <thead>
@@ -804,7 +804,7 @@
 {% endif %}
 
 {% if screenshot_form %}
-  <form action="{% url 'screenshots' path=unit.translation.component.get_url_path %}" method="POST" enctype="multipart/form-data">
+  <form action="{% url 'screenshots' path=unit.translation.component.get_url_path %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="modal fade" tabindex="-1" role="dialog" id="add-screenshot-form">
       <div class="modal-dialog" role="document">
@@ -828,7 +828,7 @@
   </form>
 {% endif %}
 {% if user_can_add_glossary and addterm_form.fields.translation.queryset %}
-    <form action="{% url 'js-add-glossary' unit_id=unit.id %}" method="POST" class="add-dict-inline double-submission">
+    <form action="{% url 'js-add-glossary' unit_id=unit.id %}" method="post" class="add-dict-inline double-submission">
     {% csrf_token %}
     <input type="hidden" name="next" value="{{ this_unit_url }}" />
     <div class="modal fade" tabindex="-1" role="dialog" id="add-glossary-form">
