--- a/weblate/templates/auth/team.html
+++ b/weblate/templates/auth/team.html
@@ -156,7 +156,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">&times;</span></button>
+              <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">×</span></button>
               <h4 class="modal-title">{% trans "Are you absolutely sure?" %}</h4>
             </div>
             <div class="modal-body">
@@ -177,7 +177,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">&times;</span></button>
+            <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">×</span></button>
             {% trans "Add a user" %}
             {% documentation_icon 'admin/access' 'invite-user' %}
           </div>
