--- a/weblate/templates/keyboard-shortcuts.html
+++ b/weblate/templates/keyboard-shortcuts.html
@@ -6,7 +6,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}">
-          <span aria-hidden="true">&times;
+          <span aria-hidden="true">×
         </button>
         <h4 id="shortcutsModal" class="panel-title">{% trans "Available Shortcuts" %}</h4>
       </div>
