--- a/weblate/templates/memory/index.html
+++ b/weblate/templates/memory/index.html
@@ -53,7 +53,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">×</span></button>
                 <h4 class="modal-title">{% trans "Are you absolutely sure?" %}</h4>
               </div>
               <div class="modal-body">
@@ -76,7 +76,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">×</span></button>
                 <h4 class="modal-title">{% trans "Are you absolutely sure?" %}</h4>
               </div>
               <div class="modal-body">
@@ -117,7 +117,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">×</span></button>
                 <h4 class="modal-title">{% trans "Are you absolutely sure?" %}</h4>
               </div>
               <div class="modal-body">
@@ -141,7 +141,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">×</span></button>
                 <h4 class="modal-title">{% trans "Are you absolutely sure?" %}</h4>
               </div>
               <div class="modal-body">
