--- a/weblate/templates/trans/project-access-row.html
+++ b/weblate/templates/trans/project-access-row.html
@@ -45,7 +45,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">&times;</span></button>
+              <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">×</span></button>
               <h4 class="modal-title">{% trans "Are you absolutely sure?" %}</h4>
             </div>
             <div class="modal-body">
@@ -65,7 +65,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">&times;</span></button>
+              <button type="button" class="close" data-dismiss="modal" aria-label="{% trans "Close" %}"><span aria-hidden="true">×</span></button>
               <h4 class="modal-title">{% blocktrans with username=user.username %}Edit team membership for {{ username }}{% endblocktrans %}</h4>
             </div>
             <div class="modal-body">
