chore(html): annotate use of empty tag pair

--- a/weblate/templates/matrix.html
+++ b/weblate/templates/matrix.html
@@ -21,8 +21,10 @@
 {% endfor %}
 </tr>
 </thead>
+{# djlint:off #}
 <tbody>
 </tbody>
+{# djlint:on #}
 <tfoot>
 <tr><td colspan="3" class="loading-icon">
 {% loading_icon "next" %}
