--- a/weblate/templates/billing/detail.html
+++ b/weblate/templates/billing/detail.html
@@ -91,7 +91,9 @@
 </td>
 </tr>
 {% empty %}
-<tr><td colspan="3">{% trans "No invoices found." %}</td/></tr>
+<tr>
+  <td colspan="3">{% trans "No invoices found." %}</td>
+</tr>
 {% endfor %}
 </tbody>
 </table>
