--- a/weblate/templates/fonts/font_list.html
+++ b/weblate/templates/fonts/font_list.html
@@ -27,6 +27,7 @@
 <th>{% trans "Language overrides" %}</th>
 <th></th>
 </tr>
+</thead>
 <tbody>
 {% for group in group_list %}
 <tr>
@@ -74,6 +75,7 @@
 <th>{% trans "Font style" %}</th>
 <th></th>
 </tr>
+</thead>
 <tbody>
 {% for font in font_list %}
 <tr>
