--- a/weblate/templates/manage/teams.html
+++ b/weblate/templates/manage/teams.html
@@ -87,7 +87,7 @@
           </td>
         </tr>
         {% endfor %}
-      <tbody>
+      </tbody>
     </table>
     <div class="panel-footer">
       {% include "paginator.html" %}
