--- a/weblate/templates/project-labels.html
+++ b/weblate/templates/project-labels.html
@@ -21,6 +21,7 @@
 <th class="number">{% trans "Labeled source strings" %}</th>
 <th>{% trans "Actions" %}</th>
 </tr>
+</thead>
 <tbody>
 {% for label in labels %}
 <tr>
