--- a/weblate/templates/snippets/query-builder.html
+++ b/weblate/templates/snippets/query-builder.html
@@ -104,12 +104,12 @@
     </tr>
     <tr>
         <th>{% trans "All untranslated strings added the past month" %}</th>
-        <td><code>added:&gt;="1 month ago" AND state:&lt;=needs-editing</code>
+        <td><code>added:&gt;="1 month ago" AND state:&lt;=needs-editing</code></td>
         <td><a href="#" class="btn btn-default search-insert">{% trans "Add" %}</a></td>
     </tr>
     <tr>
         <th>{% trans "Strings changed in the past two weeks" %}</th>
-        <td><code>changed:&gt;="2 weeks ago"</code>
+        <td><code>changed:&gt;="2 weeks ago"</code></td>
         <td><a href="#" class="btn btn-default search-insert">{% trans "Add" %}</a></td>
     </tr>
     {% if not language %}
