--- a/weblate/templates/trans/alert/duplicatelanguage.html
+++ b/weblate/templates/trans/alert/duplicatelanguage.html
@@ -3,7 +3,7 @@
 
 {% if analysis.source_language %}
 
-    <p>{% trans "The component contains translation file for the source language." %}
+    <p>{% trans "The component contains translation file for the source language." %}</p>
 
     <p>{% trans "Please consider the following:" %}</p>
 
