--- a/weblate/templates/mail/base.html
+++ b/weblate/templates/mail/base.html
@@ -90,7 +90,7 @@
             </tr>
             <tr>
                 <td>{% trans "Languages" %}</td>
-                <td><a href="{{ project.get_absolute_url }}#languages">{{ project.stats.languages|intcomma }}</td>
+                <td><a href="{{ project.get_absolute_url }}#languages">{{ project.stats.languages|intcomma }}</a></td>
                 <td></td>
             </tr>
             {% url "search" path=project.get_url_path as search_url %}
