--- a/weblate/templates/trans/project-access.html
+++ b/weblate/templates/trans/project-access.html
@@ -66,7 +66,7 @@
                 {% else %}
                   {% trans "Blocked permanently" %}
                 {% endif %}
-              <strong>
+              </strong>
             </td>
             <td>
               <form action="{% url "unblock-user" project=object.slug %}" method="post" class="inlineform">
@@ -247,7 +247,7 @@
           </td>
         </tr>
         {% endfor %}
-      <tbody>
+      </tbody>
     </table>
   </div>
   <form action="{% url "create-project-group" project=object.slug %}" method="post">
@@ -289,7 +289,7 @@
         {% for user in project_tokens %}
           {% include "trans/project-access-row.html" %}
         {% endfor %}
-      <tbody>
+      </tbody>
     </table>
   </div>
 
