chore(html): consistently use spacing in template tags

--- a/weblate/templates/snippets/editor.html
+++ b/weblate/templates/snippets/editor.html
@@ -9,7 +9,7 @@
   <div class="pull-right flip editor-footer">
     <span class="badge length">
       <span title="{% trans "The maximal string length is determined from the source string or flags." %}">
-        <span data-max="{{ max_length }}}" class="length-indicator">{{ length }}</span>/{{ max_length }}
+        <span data-max="{{ max_length }}" class="length-indicator">{{ length }}</span>/{{ max_length }}
       </span>
       {% if source_length %}
         <span title="{% trans "Source string length" %}"> · {{ source_length }}</span>
