--- a/weblate/templates/trans/embed-alert.html
+++ b/weblate/templates/trans/embed-alert.html
@@ -4,7 +4,7 @@
 {% for icon, text, url in icons %}
 {% spaceless %}
 {% if url %}<a href="{{ url }}">{% endif %}
-<span class="state-icon {% if icon == "state/ghost.svg"%} grey{% endif %}{% if icon == "state/alert.svg"%} red{% endif %}" title="{{ text }}" alt="{{ text }}">
+<span class="state-icon {% if icon == "state/ghost.svg" %} grey{% elif icon == "state/alert.svg" %} red{% endif %}" title="{{ text }}" alt="{{ text }}">
   {% icon icon %}
 </span>
 {% if url %}</a>{% endif %}
