--- a/weblate/legal/templates/legal/cookies.html
+++ b/weblate/legal/templates/legal/cookies.html
@@ -15,11 +15,11 @@
 <div class="panel-body">
 
 <p>
-{% blocktrans %}This page is based on the Terms of Service and the Privacy Policy, you should still read the original documents to fully understand them:{% endblocktrans %}
+{% blocktrans %}This page is based on the General Terms and Conditions and the Privacy Policy, you should still read the original documents to fully understand them:{% endblocktrans %}
 </p>
 
 <ul>
-<li><a href="{% url 'legal:terms' %}">{% trans "Terms of Service" %}</a></li>
+<li><a href="{% url 'legal:terms' %}">{% trans "General Terms and Conditions" %}</a></li>
 <li><a href="{% url 'legal:privacy' %}">{% trans "Privacy Policy" %}</a></li>
 </ul>
 
