--- a/weblate/legal/templates/legal/terms.html
+++ b/weblate/legal/templates/legal/terms.html
@@ -11,7 +11,7 @@
 {% include 'legal/menu.html' %}
 
 <div class="panel panel-default">
-  <div class="panel-heading"><h4 class="panel-title">{% trans "Terms of Service" %}</h4></div>
+  <div class="panel-heading"><h4 class="panel-title">{% trans "General Terms and Conditions" %}</h4></div>
   <div class="panel-body tos">
 
   {% include "legal/documents/tos.html" %}
