--- a/weblate/legal/templates/legal/index.html
+++ b/weblate/legal/templates/legal/index.html
@@ -21,12 +21,12 @@
       {% include 'legal/documents/summary.html' %}
 
       <p>
-        {% blocktrans %}This page is based on the Terms of Service and the Privacy Policy, you should still read the original documents to fully understand them:{% endblocktrans %}
+        {% blocktrans %}This page is based on the General Terms and Conditions and the Privacy Policy, you should still read the original documents to fully understand them:{% endblocktrans %}
       </p>
 
       <ul>
         <li>
-          <a href="{% url 'legal:terms' %}">{% trans "Terms of Service" %}</a>
+          <a href="{% url 'legal:terms' %}">{% trans "General Terms and Conditions" %}</a>
         </li>
         <li>
           <a href="{% url 'legal:privacy' %}">{% trans "Privacy Policy" %}</a>
