feat: Add separate dark theme color settings (#12613)
* Add separte dark theme  color settings

- Modifed the form to have two color fields (one for dark and one for light theme).
- The colors are stored  in this form"#ffffff,#000000". Where the first one is for light theme and the other for dark theme.
- Then the custom.css consumes the values and performs a split(defined in custom_filters.py) on the color string to get the two colors.
- Those colors then are defined in css variables and consumed by the elements that need them.
- The css variables change base on the current theme (for dark values to be applied it is expected that the body tag has `data-theme="dark"`)

* Add data-theme for body tag

* Fix dark theme color fields

- Insure backward compatibility with previous theme color settings.

- In the new implementation it considers if there was previous color settings. If so it applies them to dark theme colors too.

* Refactor custom.css to handle undefind color values

* Remove custom.css modifications introduced in this branch

* Delete weblate/accounts/templatetags/custom_filters.py

This was used only in custom.css file. So no longer it is necessary in here

* Add missing test coverage for compress and decompress

* Fix pylint issues

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2169,6 +2169,10 @@ tbody.warning {
   border: var(--border) !important;
 }
 
+#appearance-settings input[type="color"] {
+  width: 50%;
+}
+
 #shortcuts-table-container {
   max-height: 60vh;
   overflow-y: auto;
