chore(html): fix formatting

--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -111,7 +111,7 @@ var _rollbarConfig = {
  </head>
 
  <body
-    {% if theme %} data-theme={{theme}} {% endif %}
+    {% if theme %}data-theme="{{ theme }}"{% endif %}
     {% if LANGUAGE_BIDI %}class="dir-rtl"{% endif %}
 >
  <div id="popup-alerts"></div>
