feat: add altcha integration
This adds altcha in addition to existing match captcha.

Issue #1462

--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -60,6 +60,7 @@ var _rollbarConfig = {
 {% endif %}
   <script defer data-cfasync="false" src="{% static 'js/vendor/main.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'js/vendor/autosize.js' %}{{ cache_param }}"></script>
+  <script defer data-cfasync="false" src="{% static 'js/vendor/altcha.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'js/vendor/multi.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'js/vendor/mousetrap.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'vendor/bootstrap/js/bootstrap.js' %}{{ cache_param }}"></script>
