chore: improve zammad support form integration
- make it wider to better fit content
- remove duplicate attachments section

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2224,3 +2224,8 @@ tbody.warning {
   color: #1fa385;
   margin: 10px;
 }
+
+/* Zammad form integration */
+.zammad-form-modal-body {
+  max-width: 40em !important;
+}
