feat: allow user search to filter changes
This allows to search from the info tab to match shown numbers.

Fixes #12969
See also #11808

--- a/weblate/templates/snippets/info.html
+++ b/weblate/templates/snippets/info.html
@@ -470,7 +470,7 @@
           </div>
           <div class="col-sm-3">
             <div class="metric">
-              <a href="{% url "user_list" %}?q={% if language %}translates:{{ language.code|urlencode }}{% elif translation %}translates:{{ translation.language.code|urlencode }}{% endif %} {% if component %}contributes:{{ component.full_slug|urlencode }}{% elif project %}contributes:{{ project.slug|urlencode }}{% endif %}">
+              <a href="{% url "user_list" %}?q={% if language %}translates:{{ language.code|urlencode }}{% elif translation %}translates:{{ translation.language.code|urlencode }}{% endif %} {% if component %}contributes:{{ component.full_slug|urlencode }}{% elif project %}contributes:{{ project.slug|urlencode }}{% endif %} change_time:&gt;'30 days ago' ">
                 <div class="metric-number">{{ metrics.contributors|number_format }}</div>
                 <div class="metric-text">{% trans "Contributors" %}</div>
               </a>
