--- a/weblate/templates/zen-units.html
+++ b/weblate/templates/zen-units.html
@@ -88,7 +88,10 @@
 </td>
 {% endif %}
 <td {% if user.profile.zen_mode != user.profile.ZEN_HORIZONTAL %}colspan="2"{% endif %} class="translator">
-{% crispy item.form %}
+  <button id="hide-sticky" class="btn btn-light btn-sm" title="{% trans "Collapse" %}" >
+    {% icon "close.svg" %}
+  </button>
+  {% crispy item.form %}
 </td>
 </tr>
 
