feat: show microseconds in add-on log
This makes the debugging easier.

--- a/weblate/templates/addons/addon_logs.html
+++ b/weblate/templates/addons/addon_logs.html
@@ -51,7 +51,7 @@
               {{ log.get_event_display }}
             </td>
             <td>{{ log.details.result }}</td>
-            <td>{{ log.created|naturaltime }}</td>
+            <td>{{ log.created|naturaltime:True }}</td>
           </tr>
         {% empty %}
           <tr>
